# Shop

./: pyproject.toml
basket/: serializers.py  shopping_basket.py  tests.py  urls.py  views.py
orders/: models.py
orders/migrations/: 0001_initial.py
shop/: settings.py  urls.py
shoppp/: models.py
store/: generics_views.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_goods_comment_goods_store_goods_title_57e43a_idx_and_more.py  0003_rename_count_goods_amount.py  0004_pricehistory.py
users/: admin.py  models.py  serializers.py  urls.py
users/migrations/: 0001_initial.py  0002_user_categories_bought.py  0003_user_name.py  0004_alter_user_name.py
